--- a/doc/reazul_lib.bib
+++ b/doc/reazul_lib.bib
@@ -18429,4 +18429,9 @@ publisher = {John Wiley {\&} Sons, Inc.},
 title = {{Markov decision processes: Discrete stochastic dynamic programming}},
 year = {2005}
 }
-
+@misc{openai,
+	Author = {Greg Brockman and Vicki Cheung and Ludwig Pettersson and Jonas Schneider and John Schulman and Jie Tang and Wojciech Zaremba},
+	Title = {OpenAI Gym},
+	Year = {2016},
+	Eprint = {arXiv:1606.01540},
+}
